--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,10 @@ picture {
 
 button,
 a {
+  border: none;
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  background-color: transparent;
 }
