--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,22 @@
   переключая тему
 */
 
+
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    --bkg-image: url(../images/cover-image-dark.png);
+    --rec-visible: visible;
+    --font-family: "IBM Plex Mono", "monospace";
+    --font-size: 18px;
+    --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --bkg-color: #000028;
+    --title-color: #db00ff;
+    --text-color: #000028;
+    --accent-color: #ff0070;
+    --accent-bkg-color: #ff0070;
+    --decor-color: #ff0070;
+    --small-text-color: #f1b2ce;
+    --btn-color: var(--accent-color);
+    --btn-color-hover: #ff007040;
+    --section-text-color: var(--accent-color);
 }
