--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,40 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    --bkg-image: url(../images/cover-image-light.png);
+    --rec-visible: hidden;
+    --font-family: "IBM Plex Mono", "monospace";
+    --font-size: 18px;
+    --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --bkg-color: #fff1f7;
+    --title-color: #ffc2e6;
+    --text-color: #353430;
+    --accent-color: #ff0070;
+    --accent-bkg-color: #ff8dcb;
+    --decor-color: #353430;
+    --small-text-color: #353430;
+    --btn-color: #353430;
+    --btn-color-hover: #35343040;
+    --section-text-color: var(--accent-color);
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --bkg-image: url(../images/cover-image-light.png);
+        --rec-visible: hidden;
+        --font-family: "IBM Plex Mono", "monospace";
+        --font-size: 18px;
+        --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+        --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+        --title-color: #ffc2e6;
+        --text-color: #353430;
+        --accent-color: #ff0070;
+        --accent-bkg-color: #ff8dcb;
+        --decor-color: #353430;
+        --small-text-color: #353430;
+        --btn-color: #353430;
+        --btn-color-hover: #35343040;
+        --section-text-color: var(--accent-color);
+    }
 }
