--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,10 +5,6 @@
 :root {
     --bkg-image: url(../images/cover-image-dark.png);
     --rec-visible: visible;
-    --font-family: "IBM Plex Mono", "monospace";
-    --font-size: 18px;
-    --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --bkg-color: #000028;
     --title-color: #db00ff;
     --text-color: #000028;
@@ -19,4 +15,8 @@
     --btn-color: var(--accent-color);
     --btn-color-hover: #ff007040;
     --section-text-color: var(--accent-color);
+    --font-family: "IBM Plex Mono", monospace;
+    --font-size: 18px;
+    --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
