--- a/styles/light.css
+++ b/styles/light.css
@@ -17,7 +17,7 @@
     --btn-color: #353430;
     --btn-color-hover: #35343040;
     --section-text-color: var(--accent-color);
-    --font-family: "IBM Plex Mono", "monospace";
+    --font-family: "IBM Plex Mono", monospace;
     --font-size: 18px;
     --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -36,7 +36,7 @@
         --btn-color: #353430;
         --btn-color-hover: #35343040;
         --section-text-color: var(--accent-color);
-        --font-family: "IBM Plex Mono", "monospace";
+        --font-family: "IBM Plex Mono", monospace;
         --font-size: 18px;
         --font-size-mini: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
         --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
